# ia-la-were

./: .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml
assets/webdesign/: ia_la_w_re_project_context.txt
assets/webdesign/analyse_en_cours_lot_2026_042/: code.html
assets/webdesign/industrial_precision/: DESIGN.md
assets/webdesign/rapport_lot_lot_2026_042/: code.html
assets/webdesign/tableau_de_bord_ia_la_w_re/: code.html
config/: settings.yaml  tailwind.js
docker/: Dockerfile  docker-compose.yml
src/: app.js  cli.py  config.py  state.js
src/components/: header.js  nav.js
src/data/: lots.js
src/detectors/: base.py  label_detector.py  scorie_detector.py
src/pipeline/: batch_processor.py
src/screens/: analyse.js  dashboard.js  rapport.js
src/utils/: image_validator.py  logger.py
styles/: main.css
tests/: conftest.py  test_batch_processor.py  test_image_validator.py  test_label_detector.py  test_scorie_detector.py
