[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ia-la-were"
version = "0.1.0"
description = "Détection visuelle industrielle locale — containers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.3.0",
    "opencv-python-headless>=4.8.0",
    "typer>=0.12.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
]

[project.scripts]
ia-la-were = "src.cli:app"

[tool.setuptools.packages.find]
include = ["src*"]

# ── Outils ─────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=src --cov-report=term-missing --cov-fail-under=80"
